# ros2_demos

./: README.md
ros2_ws/src/my_robot_actions/: CMakeLists.txt  actions.md  package.xml
ros2_ws/src/my_robot_actions/src/: count_until_client.cpp  count_until_client_cancel_test.cpp  count_until_server_blocking.cpp  count_until_server_non_blocking.cpp  count_until_server_preempt_current_goal.cpp  count_until_server_queue_goals.cpp  count_until_server_single_goal.cpp
ros2_ws/src/my_robot_bringup/: package.xml
ros2_ws/src/my_robot_bringup/launch/: component.launch.xml  launch_files.md  lifecycle_test.launch.xml  my_robot_gazebo.launch.xml  my_robot_rviz.launch.xml  number_app.launch.py
ros2_ws/src/my_robot_components/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_components/include/components_cpp/: node1.hpp  node2.hpp  number_publisher.hpp
ros2_ws/src/my_robot_components/src/: manual_composition.cpp  node2.cpp  number_publisher.cpp
ros2_ws/src/my_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_description/rviz/: rviz_file.md  urdf_config.rviz
ros2_ws/src/my_robot_description/urdf/: camera.urdf.xacro  common_properties.urdf.xacro  mobile_base.urdf.xacro  mobile_base_gazebo.urdf.xacro  my_robot.urdf.xacro
ros2_ws/src/my_robot_description/worlds/: test_world.world  world_file.md
ros2_ws/src/my_robot_examples/: CMakeLists.txt  package.xml  topics.md
ros2_ws/src/my_robot_examples/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  battery.cpp  compute_rectangle_area_client.cpp  compute_rectangle_area_server.cpp  hw_status_publisher.cpp  led_panel.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_publisher.cpp  robot_news_subscriber.cpp  template.cpp
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_interfaces/msg/: HardwareStatus.msg
ros2_ws/src/my_robot_interfaces/srv/: SetLed.srv
ros2_ws/src/my_robot_lifecycle/: CMakeLists.txt  lifecycle.md  package.xml
ros2_ws/src/my_robot_lifecycle/src/: number_publisher.cpp
ros2_ws/src/my_robot_project/: CMakeLists.txt  package.xml
